# Omaha-Hi-Lo

./: .gitignore  CMakeLists.txt  README.md  expected_output.txt  output.txt
OmahaComp/: CMakeLists.txt
OmahaComp/Header Files/: Board.h  Card.h  Enums.h  Hand.h  Poker.h
OmahaComp/Source Files/: Board.cpp  Card.cpp  Hand.cpp  Poker.cpp  main.cpp
OmahaComp/headers/: Board.h  Card.h  Checker.h  Combinations.h  Enums.h  Hand.h  Poker.h  Tools.h
OmahaComp/src/: Board.cpp  Card.cpp  Checker.cpp  Hand.cpp  Poker.cpp  Tools.cpp  main.cpp
OmahaTest/: CMakeLists.txt
OmahaTest/Source Files/: OmahaTest.cpp
OmahaTest/src/: CardTest.cpp  CheckerTest.cpp  OmahaTest.cpp  ToolsTest.cpp
